BINANCE: balance and prices retrieve